<resources>
    <string name="app_name">Notas</string>

    <string name="fab">Engadir nota</string>
    <string name="data">Data</string>
    <string name="modulo">Módulo</string>
    <string name="tituloNota">Título</string>
    <string name="modificarNota">Modificar unha nota</string>
    <string name="add">Crear unha nova nota</string>
    <string name="btAdd">Engadir</string>
    <string name="btSave">Gardar</string>
    <string name="btCancel">Cancelar</string>
    <string name="login">LOGIN</string>
    <string name="nome">Nome</string>
    <string name="password">Contrasinal</string>
    <string name="rexistrarse">REXISTRARSE</string>
    <string name="acceder">ACCEDER</string>


</resources>