<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login.MainActivity">

        <TextView
            android:id="@+id/txvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/login"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.231" />

        <EditText
            android:id="@+id/etNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@color/transparencia"
            android:elevation="2dp"
            android:ems="10"
            android:hint="@string/nome"
            android:inputType="text"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="@+id/txvLogin"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toStartOf="@+id/txvLogin"
            app:layout_constraintTop_toBottomOf="@+id/txvLogin" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/transparencia"
            android:elevation="2dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="@+id/txvLogin"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toStartOf="@+id/txvLogin"
            app:layout_constraintTop_toBottomOf="@+id/etNome" />

        <Button
            android:id="@+id/button"
            style="@style/botones"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/acceder"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="240dp" />

        <Button
            android:id="@+id/button2"
            style="@style/botones"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="56dp"
            android:text="@string/rexistrarse"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>